--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,10 @@
         </dependency>
         <dependency>
             <groupId>com.grinderwolf</groupId>
-            <artifactId>slimeworldmanager-api</artifactId>
+            <artifactId>slimeworldmanager</artifactId>
             <version>2.9.1-SNAPSHOT</version>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/jars/slimeworldmanager-plugin-2.9.1-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
